# django-willpower

./: .gitignore  CHANGELOG.rst  LICENCE.txt  MANIFEST.in  Makefile  README.rst  cookiebaked.json  frozen.txt  model_prototyper.py  setup.cfg
django_willpower/: __init__.py  available_components.py  builder.py  datamodels.py  exceptions.py  hello.py  models.py
django_willpower/app_templates/: _utils.jinja  jinja_whitespace.html
django_willpower/app_templates/admin/: __init__.py  module.py
django_willpower/app_templates/models/: __init__.py  _modeldoc.py  module.py
django_willpower/app_templates/models/fields/: BooleanField.py  CharField.py  ChoiceField.py  DateTimeField.py  EmailField.py  FileField.py  ForeignKey.py  ImageField.py  IntegerField.py  ManyToManyField.py  PositiveIntegerField.py  SlugField.py  TextField.py
django_willpower/app_templates/templates/: menu.html  model_detail.html
django_willpower/app_templates/urls/: __init__.py
django_willpower/cli/: ast_parser.py  create.py  entrypoint.py  greet.py  version.py
django_willpower/core/: __init__.py  appstack.py  builder.py  datamodel.py  djangomodel.py  project.py
django_willpower/data/: sample_declarations.json
django_willpower/data/default_stack/: _utils.jinja  apps.py  appstack.json  choices.py  django_configuration.py  settings.py
django_willpower/data/default_stack/admin/: module.py
django_willpower/data/default_stack/forms/: __init__.py  module.py
django_willpower/data/default_stack/migrations/: __init__.py
django_willpower/data/default_stack/models/: __init__.py  module.py
django_willpower/data/default_stack/models/fields/: BooleanField.py  CharField.py  ChoiceField.py  DateField.py  DateTimeField.py  EmailField.py  FileField.py  ForeignKey.py  ImageField.py  IntegerField.py  ManyToManyField.py  PositiveIntegerField.py  SlugField.py  TextField.py
django_willpower/data/default_stack/templates/: base.html  menu.html  model_detail.html  model_index.html  pagination.html
django_willpower/data/default_stack/templatetags/: paginator_tags.py
django_willpower/data/default_stack/urls/: __init__.py  module.py
django_willpower/data/default_stack/views/: __init__.py  module.py
django_willpower/data/stacks/: advanced.json
django_willpower/structure_template/: cookiecutter.json
django_willpower/structure_template/{{cookiecutter.package_name}}/: Makefile  README.rst  setup.cfg
django_willpower/structure_template/{{cookiecutter.package_name}}/docs/: conf.py
django_willpower/structure_template/{{cookiecutter.package_name}}/frontend/: package.json
django_willpower/structure_template/{{cookiecutter.package_name}}/sandbox/settings/: base.py  tests.py
django_willpower/structure_template/{{cookiecutter.package_name}}/tests/: conftest.py
django_willpower/structure_template/{{cookiecutter.package_name}}/{{cookiecutter.app_name}}/: routers.py
django_willpower/structure_template/{{cookiecutter.package_name}}/{{cookiecutter.app_name}}/templates/{{cookiecutter.app_name}}/: display_value.html
django_willpower/utils/: jinja.py  jsons.py  parsing.py  stackpath.py  texts.py  validations.py
docs/: cli.rst  conf.py  development.rst  draft.rst  index.rst  install.rst  overview.rst  sphinx_reload.py
docs/references/: exceptions.rst  hello.rst  index.rst  logger.rst
tests/: 0001_utils_texts.py  0010_appstack.py  0010_value_parser.py  0011_datamodel.py  0020_project.py  0020_registry.py  0100_builder.py  0110_appstack.py  0111_datamodel.py  0200_builder.py  0500_jinja_extensions.py  conftest.py
tests/001_hello/: 001_hello_base.py  02_hello_html.py
tests/100_cli/: 001_cli_version.py  010_greet.py
tests/data_fixtures/appstack_samples/: blog.json  cms.json
tests/data_fixtures/config_samples/: models_basic_blog.json  models_basic_cms.json
tests/data_fixtures/config_samples/appstack_dual_components/: appstack.json
tests/data_fixtures/config_samples/appstack_dual_components/plugins/: module.py
tests/data_fixtures/config_samples/appstack_dual_components/views/: module.py
tests/data_fixtures/config_samples/appstack_single_component/: appstack.json
tests/data_fixtures/config_samples/appstack_single_component/views/: module.py
