;;
;; Django Willpower package
;;
[metadata]
name = django-willpower
version = 0.1.0
description = A Django application builder
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/django-willpower
project_urls =
    Source Code = https://github.com/sveetch/django-willpower
    Issue Tracker = https://github.com/sveetch/django-willpower/issues
    Changelog = https://django-willpower.readthedocs.io/en/latest/history.html
    Documentation = https://django-willpower.readthedocs.io/
license = MIT
keywords = Python
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.10
include_package_data = True
install_requires =
    cookiecutter>=2.4.0
    click>=8.0
    Jinja2
    colorlog
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest>=7.0.0
quality =
    flake8>=6.0.0
    tox>=4.11.0
doc =
    sphinx>=8.0.2
    furo>=2024.8.6
    sphinx-copybutton>=0.5.2
doc-live =
    livereload>=2.6.0
release =
    twine>=5.0.0

[options.packages.find]
where = .
exclude=
    dist
    data
    docs
    tests

[options.entry_points]
console_scripts =
    django_willpower = django_willpower.cli.entrypoint:cli_frontend

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__,
    django_willpower/app_templates,
    django_willpower/structure_template,

[tool:pytest]
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist =  py{310,311}

[testenv]

commands =
    pip install -e .[dev]
    pytest -vv tests
