;;
;; {{ cookiecutter.project_name }} package
;;
[metadata]
name = {{ cookiecutter.package_name }}
version = {{ cookiecutter.version }}
description = {{ cookiecutter.project_short_description }}
long_description = file:README.rst
long_description_content_type = text/x-rst
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
url = https://github.com/{{ cookiecutter.author_username }}/{{ cookiecutter.package_name }}
project_urls =
    Source Code = https://github.com/{{ cookiecutter.author_username }}/{{ cookiecutter.package_name }}
    Issue Tracker = https://github.com/{{ cookiecutter.author_username }}/{{ cookiecutter.package_name }}/issues
    Changelog = https://{{ cookiecutter.package_name }}.readthedocs.io/en/latest/history.html
    Documentation = https://{{ cookiecutter.package_name }}.readthedocs.io/
license = MIT
keywords = Python,Django{% if cookiecutter.include_cmsplugin %},django-cms{% endif %}
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Framework :: Django :: 5.2

[options]
python_requires = >=3.10
include_package_data = True
install_requires =
    Django>=4.2,<6.0{% if cookiecutter.include_api %}
    djangorestframework>=3.16.0,<3.17.0{% endif %}{% if cookiecutter.include_cmsplugin %}
    django-cms>=5.0.0,<6.0.0
    djangocms-text>=0.5.1{% endif %}
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-django>=4.0.0
    factory-boy>=3.3.0
    pyquery>=2.0.0
    freezegun>=1.2.0
quality =
    flake8>=6.0.0
    tox>=4.11.0
doc =
    sphinx>=8.0.2
    furo>=2024.8.6
    sphinx-copybutton>=0.5.2
doc-live =
    livereload>=2.6.0
release =
    twine>=5.0.0

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -v --tb=long
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist =
    #py{39}-django{40,42}{% if cookiecutter.include_api %}-api313{% endif %}{% if cookiecutter.include_cmsplugin %}-cms{311}{% endif %}
    py{311}-django{42}{% if cookiecutter.include_api %}-api314{% endif %}{% if cookiecutter.include_cmsplugin %}-cms{cms500}{% endif %}
    py{311}-django{52}{% if cookiecutter.include_api %}-{316,noapi}{% endif %}{% if cookiecutter.include_cmsplugin %}-cms{cms500}-{versioning,noversioning}{% endif %}

[testenv]

deps =
    django40: Django>=4.0,<4.1
    django41: Django>=4.1,<4.2
    django42: Django>=4.2,<5.0
    django50: Django>=5.0,<5.1
    django51: Django>=5.1,<5.2
    django52: Django>=5.2,<6.0{% if cookiecutter.include_api %}
    api313: djangorestframework>=3.13.1,<3.14.0
    api314: djangorestframework>=3.14.0,<3.15.0
    api315: djangorestframework>=3.15.0,<3.16.0
    api316: djangorestframework>=3.16.0,<3.17.0{% endif %}{% if cookiecutter.include_cmsplugin %}
    cms311: django-cms>=3.11.0,<4.0
    cms410: django-cms>=4.1.0,<5.0.0
    cms500: django-cms>=5.0.0,<6.0.0
    versioning: djangocms-versioning>=2.1.0{% endif %}

commands =
    pip install -e .[dev]
    pytest -vv tests
